# software-renderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  xmake.lua
core/: xmake.lua
core/include/node/: camera.h  mesh.h
core/src/: camera.cpp  mesh.cpp
rasterizer/: CMakeLists.txt  xmake.lua
rasterizer/include/: rasterizer.h
rasterizer/include/rasterizer/: rasterizer.h
rasterizer/src/: rasterizer.cpp
src/: main.cpp
wmath/: CMakeLists.txt  xmake.lua
wmath/include/: matrix.h  vector.h  wmath.h
wmath/include/wmath/: wmath.h
wmath/src/: vector.cpp  wmath.cpp
